--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,8 +1,3 @@
 {
-    "liveServer.settings.port": 5501,
-    "workbench.colorCustomizations": {
-        "activityBar.background": "#0F286A",
-        "titleBar.activeBackground": "#153994",
-        "titleBar.activeForeground": "#F8FAFE"
-    }
+    "liveServer.settings.port": 5501
 }
